--- a/cdo_ansible/cdo_onboard.yml
+++ b/cdo_ansible/cdo_onboard.yml
@@ -20,26 +20,26 @@
   - name: Hello World!
     ansible.builtin.debug: msg="Groups are {{group_names}} api_key is {{tenant['api_key']}}"
 
-#  ###############################################################################
-#  # Load devices to onboard, API keys, and needed host facts
-#  ###############################################################################
-#  - name: Get this devices settings from host varaibles
-#    ansible.builtin.set_fact:
-#      device_name: "{{ inventory_hostname }}"
-#      api_key: "{{ tenant.api_key }}"
-#      cdo_region: "{{ tenant.cdo_region }}"
-#      device_type: "{{ hostvars[inventory_hostname].device_type | upper if hostvars[inventory_hostname].device_type | upper != 'FTD' else 'FTDC' }}"
-#      onboard_method: "{{ hostvars[inventory_hostname].onboard_method if hostvars[inventory_hostname].onboard_method is defined }}"
-#      serial_number: "{{ hostvars[inventory_hostname].serial_number if hostvars[inventory_hostname].serial_number is defined }}"
-#      access_control_policy: "{{ hostvars[inventory_hostname].access_control_policy if hostvars[inventory_hostname].access_control_policy is defined}}"
-#      licenses: "{{ hostvars[inventory_hostname].licenses | join(',') if hostvars[inventory_hostname].licenses is defined }}"
-#      performance_tier: "{{ hostvars[inventory_hostname].performance_tier if hostvars[inventory_hostname].performance_tier is defined }}"
-#      lar_name: "{{ hostvars[inventory_hostname].lar_name if hostvars[inventory_hostname].lar_name is defined }}"
-#      device_ip: "{{ hostvars[inventory_hostname].ip_address if hostvars[inventory_hostname].ip_address is defined }}"
-#      device_port: "{{ hostvars[inventory_hostname].port if hostvars[inventory_hostname].port is defined }}"
-#      # username: "{{ device.username if device.username is defined }}"
-#      # password: "{{ device.password if device.password is defined }}"
-#  
+  ###############################################################################
+  # Load devices to onboard, API keys, and needed host facts
+  ###############################################################################
+  - name: Get this devices settings from host varaibles
+    ansible.builtin.set_fact:
+      device_name: "{{ inventory_hostname }}"
+      api_key: "{{ tenant.api_key }}"
+      cdo_region: "{{ tenant.cdo_region }}"
+      device_type: "{{ hostvars[inventory_hostname].device_type | upper if hostvars[inventory_hostname].device_type | upper != 'FTD' else 'FTDC' }}"
+      onboard_method: "{{ hostvars[inventory_hostname].onboard_method if hostvars[inventory_hostname].onboard_method is defined }}"
+      serial_number: "{{ hostvars[inventory_hostname].serial_number if hostvars[inventory_hostname].serial_number is defined }}"
+      access_control_policy: "{{ hostvars[inventory_hostname].access_control_policy if hostvars[inventory_hostname].access_control_policy is defined}}"
+      licenses: "{{ hostvars[inventory_hostname].licenses | join(',') if hostvars[inventory_hostname].licenses is defined }}"
+      performance_tier: "{{ hostvars[inventory_hostname].performance_tier if hostvars[inventory_hostname].performance_tier is defined }}"
+      lar_name: "{{ hostvars[inventory_hostname].lar_name if hostvars[inventory_hostname].lar_name is defined }}"
+      device_ip: "{{ hostvars[inventory_hostname].ip_address if hostvars[inventory_hostname].ip_address is defined }}"
+      device_port: "{{ hostvars[inventory_hostname].port if hostvars[inventory_hostname].port is defined }}"
+      # username: "{{ device.username if device.username is defined }}"
+      # password: "{{ device.password if device.password is defined }}"
+  
 #  ###############################################################################
 #  # Onboard ASA and IOS devcies
 #  ###############################################################################
