--- a/cdo_ansible/cdo_onboard.yml
+++ b/cdo_ansible/cdo_onboard.yml
@@ -52,7 +52,7 @@
           name: credentials
           
       - name: Username and password from vault
-        ansible.builtin.setfact:
+        ansible.builtin.set_fact:
           username: "{{ credentials.username if device.username is defined }}"
           password: "{{ credentials.password if device.password is defined }}"
           
